# Video_note_generator

./: .env.example  .gitignore  README.md  env.example  requirements.txt  video_note_generator.py  web.py
src/adapter/: ffmpeg.py  openrouter.py  unsplash.py
src/downloader/: downloader.py  error.py
src/environment/: env.py
src/logger/: __init__.py  logger.py
src/platform/: platfrom.py
src/setting/: setting.py
src/util/: extend.py  url.py
src/video/: audio.py  convert.py  prompt.py
video_note_generator_v2/: .env.example  .gitignore  BILIBILI_RATE_LIMIT.md  COOKIES_AUTO_SETUP.md  COOKIES_GUIDE.md  COOKIE_GUIDE.md  LICENSE  PLATFORM_SUPPORT.md  QUICK_SETUP.md  README.md  export_cookies.py  pyproject.toml  requirements.txt  requirements_full.txt  run_web.sh  setup.py  start_web.sh  web_app.py  打造本地化YouTube视频转博客系统完整教程.md
video_note_generator_v2/.streamlit/: config.toml
video_note_generator_v2/docs/: ARCHITECTURE.md  MAINSTREAM_PLATFORMS.md  MIGRATION.md  PLATFORM_SUPPORT.md  USAGE.md  WORKFLOW.md
video_note_generator_v2/src/video_note_generator/: __init__.py  ai_processor.py  cli.py  config.py  image_service.py  processor.py  subtitle_extractor.py  transcriber.py
video_note_generator_v2/src/video_note_generator/downloader/: __init__.py  base.py  bilibili_downloader.py  http_file_downloader.py  multi_strategy_downloader.py  res_downloader.py  ytdlp_downloader.py
video_note_generator_v2/src/video_note_generator/generators/: __init__.py  blog.py  xiaohongshu.py
video_note_generator_v2/src/video_note_generator/utils/: __init__.py  cookie_manager.py  logger.py  text_utils.py
video_note_generator_v2/static/css/: style.css
video_note_generator_v2/static/js/: app.js
video_note_generator_v2/templates/: index.html
